# dev-modules

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MODULE_AUTHOR_GUIDE.md  README.md  SPEC.md  kit-lint.yaml
.claude/: preferences.toml  settings.json
.claude/hooks/: parley-unread.sh  pm-bridge-reminder.sh  post-compact.sh  pre-compact.sh  precompact_body_scrape_hook.py  session-context.sh  state_digest.py  sync_from_parley_hook.py  validate-state.sh
.codex/: config.toml
.codex/hooks/: pre_compact_handoff.sh  state_digest_emit.sh  validate_state.sh
.modules/parley/: module.toml
.modules/workshop-lite/: module.toml
docs/.templates/: charter-template-snippet-web-ui-verify.md  conversation.md  decision.md  gate.md  halt.md  handoff.md  issue.md  prd.md  retro.md  review.md  sprint-plan.md  task-line.md
docs/conventions/: INDEX.md  arc-close-handoff-discipline.md  cohort-shape-variant-pre-declaration.md  detached-index-protective-snapshot.md  evidence-persists-never-tmp-only.md  governance-layer-must-be-durable.md  kris-never-the-relay.md  lead-seat-sweep-duty.md  memory-audit-and-promote-pattern.md  memory-scope-curate-not-accrete.md  (+5 more)
examples/: module.toml
personas/: collaborator.md  devil-advocate.md  forward-compat-checker.md  prd-coach.md  risk-analyst.md  scope-checker.md  security-auditor.md  ux-reviewer.md
python/: pyproject.toml
python/dev_modules/: __init__.py  reader.py  schema.py
python/tests/: test_reader.py
scripts/: check-kit-lint.sh  register.sh  unregister.sh
typescript/: package-lock.json  package.json  tsconfig.json
(+96 files in other folders)
