[project]
name = "dev-modules"
version = "0.1.0"
description = "Per-repo service discovery for dev-tool integrations (see repo README)"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "tomli; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/JanusMarko/dev-modules"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dev_modules*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
